*
* 2.2.11
*

- Fixed issues:
	NX-1513 (Server installation fails with MySQL 8.0)
	NX-1518 (Variable $object is not set for scheduled scripts associated with object other than node)

*
* 2.2.10
*

- Improved server startup time
- Added server startup event SYS_SERVER_STARTED
- New method readInternalParameter in NXSL classes Node, Cluster, MobileDevice
- Improved cached agent data reconciliation
- Fixed DCI instance discovery issues
- Fixed apkg installer script on AIX
- Fixed issues:
	NX-1477 (Offline data collection does not cleanup old data if there are no connection with the server)
	NX-1514 (Predefined graph tree displayed incorrectly)


*
* 2.2.9
*

- New NXSL functions: Base64Decode, Base64Encode, EventCodeFromName, EventNameFromCode
- Original event name passed to alarm timeout event as 5th parameter
- Added information tooltips in switch port view
- Improved performance of active network discovery
- Minimum, maximum, and moving average for ICMP response time in ping subagent
- Fixed issues:
	NX-1463 (Web UI does not work under Tomcat 9)
	NX-1475 (Deselected "Create helpdesk ticket on alarm creation" is not being saved in EPP)
	NX-1486 (NXSL function CreateDCI should allow creation with default retention and poll intervals)
	NX-1489 (Unreliable MariaDB Connector/C version detection in workaround for MariaDB bug CONC-281)
	NX-1494 (Release 2.2.8 failed to compile on macOS)
	NX-1496 (Add agent parameters System.Memory.Physical.Available and System.Memory.Physical.AvailablePerc on FreeBSD)
	NX-1501 (In test mode $dci variable is not set)
	NX-1502 (Configuration poll resets SNMP version on node)
	NX-1503 (Access denied error on attempt to take screenshot even if user has take screenshot access right)
	NX-1504 (Server crash after compiling library script with syntax error)
	NX-1505 (Assignment in NXSL "global" statement ignored if variable already declared as global)
	NX-1510 (Agent list Net.InterfaceNames not supported on FreeBSD)


*
* 2.2.8
*
