@@ -5,6 +5,8 @@
 - Fixed issues:
 	NX-1513 (Server installation fails with MySQL 8.0)
 	NX-1518 (Variable $object is not set for scheduled scripts associated with object other than node)
+	NX-1519 ("Import dashboard" action not available in dashboard group context menu)
+
 
 *
 * 2.2.10
